language/move-lang/tests/move_check/parser/module_missing_rbrace.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/module_missing_rbrace.move:4:1
  │
4 │ 
  │ ^
  │ 
  │ Unexpected end-of-file
  │ Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

